eggenberg-talos-cluster-1/argocd-apps-configuration/pmhme/overlays/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-test
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
